--- a/client/modules/Home/components/QuizListItem/styles.css
+++ b/client/modules/Home/components/QuizListItem/styles.css
@@ -1,39 +1,55 @@
 .quizListItem {
+  margin: 5px;
 
+  display: flex;
+  flex-grow: 1;
+
+  width: 31.9%;
+  width: calc(33% - 10px);
+
+  transition: box-shadow 0.3s ease;
+
+  cursor: pointer;
+  background-color: #fff;
+}
+
+@media (max-width: 767px) {
+  .quizListItem {
+    width: calc(50% - 10px);
+  }
+}
+
+@media (max-width: 568px) {
+  .quizListItem {
+    width: calc(100% - 10px);
+  }
+}
+
+@media (max-width: 480px) {
+  .quizListItem {
+    width: 100%;
+  }
 }
 
 .quizListItemInner {
-  position: relative;
-
-  width: 100%;
-  padding-bottom: 66%;
-
-  background-color: #FFF;
+  padding: 5px;
+  flex: 1;
 }
 
 .quizLink {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  top: 0;
-
   display: block;
-  padding: 5px;
+  height: 100%;
 }
 
 .quizTitle {
-  margin: 5px 0 0 0;
-
+  display: block;
+  font-size: 15px;
+  line-height: 20.0px;
+  font-weight: bold;
+  color: #333;
+  border: none;
   text-align: left;
+  margin: 5px 0 0 0;
   white-space: normal;
   word-break: break-word;
-
-  display: block;
-
-  font-size: 16px;
-  font-weight: bold;
-  line-height: 20px;
-
-  color: #333;
 }
