--- a/client/modules/Quiz/pages/Quiz/styles.css
+++ b/client/modules/Quiz/pages/Quiz/styles.css
@@ -1,5 +1,10 @@
 .quizContainer {
   background: #ffcf56;
   box-shadow: 0 0 0px 10px #FFFFFF inset;
-  padding: 20px;
+  padding: 20px 20px 40px;
+}
+
+.imgContainer {
+  max-width: 300px;
+  margin: 20px auto;
 }
