--- a/client/modules/Result/pages/Result/styles.css
+++ b/client/modules/Result/pages/Result/styles.css
@@ -1,5 +1,4 @@
-.quizContainer {
-  background-color: #ffcf56!important;
+.resultContainer {
   box-shadow: 0 0 0px 10px #FFFFFF inset;
   padding: 20px 20px 40px;
 }
