feat(result): upload to s3, sharing on facebook

--- a/client/modules/Result/pages/Result/styles.css
+++ b/client/modules/Result/pages/Result/styles.css
@@ -6,4 +6,10 @@
 .imgContainer {
   max-width: 300px;
   margin: 20px auto;
+  text-align: center;
+}
+
+.imgContainer .image {
+  width: 100%;
+  margin-bottom: 15px;
 }
