--- a/client/main.css
+++ b/client/main.css
@@ -4,9 +4,20 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
 }
 
 html body {
   background-color: #E6EAEF;
-  font-family: 'Lato', sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h2 {
+    font-size: 20px;
+}
+
+@media (min-width: 992px) {
+    h2 {
+        font-size: 30px;
+    }
 }
