--- a/client/modules/Result/components/FacebookShareButton/styles.css
+++ b/client/modules/Result/components/FacebookShareButton/styles.css
@@ -1,6 +1,6 @@
 .facebookButton {
   position: relative;
-  padding: 8px 20px 8px 40px;
+  padding: 15px 20px 15px 60px;
   border: 2px solid #3d518b;
   border-radius: 6px;
   background-clip: padding-box;
@@ -10,19 +10,24 @@
   text-shadow: 0 -2px 0 #425993;
   display: inline-block;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 18px;
   word-wrap: break-word;
   white-space: normal;
   text-decoration: none!important;
   cursor: pointer;
 }
 
+.facebookButton:hover {
+  cursor: pointer;
+  background-image: linear-gradient(to top,#415ea6 0%,#5774bc 100%);
+}
+
 .fbImage {
-  width: 19px;
-  height: 19px;
+  width: 30px;
+  height: 32px;
   position: absolute;
-  top: 9px;
-  left: 11px;
+  top: 11px;
+  left: 17px;
 }
 
 .buttonText {
