--- a/client/main.css
+++ b/client/main.css
@@ -12,12 +12,8 @@ html body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-h2 {
-    font-size: 20px;
-}
-
-@media (min-width: 992px) {
-    h2 {
-        font-size: 30px;
-    }
+@media (max-width: 992px) {
+  h2 {
+    font-size: 20px!important;
+  }
 }
